updated Runtime.exec() calls